--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -320,6 +320,7 @@ nav#main-nav ul#main-ul li a.nav-darken:hover{
   background-color: #000;
   background-image: url('../images/warsaw-bg3.png');
   background-size: cover;
+  background-position: bottom;
   @include dirrow;
   justify-content: center;
   .frames-box{
@@ -590,6 +591,7 @@ nav#main-nav ul#main-ul li a.nav-darken:hover{
   width: 100%;
   background-image: url('../images/close-up-grass-bw.png');
   background-size: cover;
+  background-position: bottom;
   height: 46rem;
   .numbers-cover{
     width: 100%;
