--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -494,7 +494,7 @@ nav#main-nav ul#main-ul li a.nav-darken:hover{
   100% {color: rgba(255, 255, 255, 1);}
   }
   #photo1{
-    background-image: url('../images/photo1.jpeg');
+    background-image: url('../images/photo12.jpg');
     background-size: cover;
     background-position: center;
   }
@@ -504,7 +504,7 @@ nav#main-nav ul#main-ul li a.nav-darken:hover{
     background-position: center;
   }
   #photo3{
-    background-image: url('../images/photo3.jpeg');
+    background-image: url('../images/photo31.jpg');
     background-size: cover;
     background-position: center;
   }
